bug78975 increase z-index for filter-time-dropdown-form
bug78975 increase z-index for filter-time-dropdown-form

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -220,7 +220,7 @@
 	padding: 5px 10px 0;
 	max-height: 300px;
 	overflow-y: scroll;
-	z-index: 900;
+	z-index: 990;
 }
 
 .filter-time-dropdown-button {
